[Anvesh] : implement UC9 grouping persons by city and state using Java Streams